# kepler

./: README.md  pyproject.toml  test.py
kepler/: __init__.py  reporting.py  timer.py  types.py
kepler/report/: brail.py  color.py  format.py  reporter.py  units.py
kepler/reporting/: __init__.py  brail.py  color.py  event.py  format.py  reporter.py  units.py
tests/: test_empty_report.py  test_timer.py
